--- a/src/main/webapp/partials/menu.html
+++ b/src/main/webapp/partials/menu.html
@@ -9,7 +9,7 @@
         <a href="#" class="list-group-item" ui-sref="main.received_list" ui-sref-active="active">
             Received <span class="badge">{{mainCtrl.receivedUnreadEmailsCnt}}</span>
         </a>
-        <a href="#" class="list-group-item" ui-sref="main.sent_list">Sent</a>
+        <a href="#" class="list-group-item" ui-sref="main.sent_list" ui-sref-active="active">Sent</a>
         <a href="#" class="list-group-item" ui-sref-active="active" ui-sref="main.trash_list">Trash</a>
     </div>
 </div>
